# crossy-roads

./: 2022li1g003.cabal  README.md  Setup.hs
doc/html/: LI12223.html  Locale.html  Main.html  Render-Animator.html  Render-Backend-Atlas.html  Render-Backend-Font.html  Render-Common.html  Render-Play-Internal.html  Render-Play.html  Render-World-Level.html  Render-World-Save.html  Render-World.html  Render.html  SMTOffsets.html  Save.html  Tarefa1_2022li1g003.html  Tarefa2_2022li1g003.html  Tarefa2_v2.html  Tarefa3_2022li1g003.html  Tarefa3_v2.html  Tarefa4_2022li1g003.html  Tarefa5_2022li1g003.html  Tarefa5_v2.html  Util-Logger-Colors.html  Util-Logger.html  Util-Record.html  Util.html  doc-index-36.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  (+15 more)
scripts/: dev  makeAtlas  setup  toBMP  zipLocally
scripts/lib/node/: BMPLib.js  dedent.js  imagePacker.js  makeAtlas.js  makeAtlas_old.js  package.json  setup.sh
src/: LI12223.hs  Locale.hs  Main.hs  Render.hs  SMTOffsets.hs  Save.hs  Tarefa1_2022li1g003.hs  Tarefa2_2022li1g003.hs  Tarefa2_v2.hs  Tarefa3_2022li1g003.hs  Tarefa3_v2.hs  Tarefa4_2022li1g003.hs  Tarefa5_2022li1g003.hs  Tarefa5_v2.hs  Util.hs
src/Defaults/lang/: en_US.json  pt_PT.json
src/Render/: Animator.hs  Common.hs  Play.hs  World.hs
src/Render/Backend/: Atlas.hs  Font.hs
src/Render/Play/: Internal.hs
src/Render/World/: Level.hs  Save.hs
src/Util/: Logger.hs  Record.hs
src/Util/Logger/: Colors.hs
tests/: Spec.hs  Tarefa1_2022li1g003_Spec.hs  Tarefa2_2022li1g003_Spec.hs  Tarefa3_2022li1g003_Spec.hs  Tarefa4_2022li1g003_Spec.hs  Tarefa5_2022li1g003_Spec.hs
