cabal-version:      2.4
name:               2022li1g003
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

author:             Alex Araújo de Sá  <a104257@alunos.uminho.pt>
                    Rafael Santos Fernandes <a104271@alunos.uminho.pt>

build-type: Custom

custom-setup
  setup-depends:
    Cabal >=1.24.1, 
    base ^>=4.16.3.0, 
    directory ^>=1.3.6.2,
    filepath ^>=1.4.2.2,
    process ^>=1.6.13.2

library
  exposed-modules:
    Main
    LI12223
    Util
    Tarefa1_2022li1g003
    Tarefa2_2022li1g003
    Tarefa3_2022li1g003
    Tarefa4_2022li1g003
    Locale
  build-depends:    
    base ^>=4.16.3.0, 
    time ^>=1.11.1.1, 
    random ^>=1.2.1.1, 
    bytestring ^>=0.11.3.1,
    binary ^>=0.8.9.0,
    directory ^>=1.3.6.2,
    filepath ^>=1.4.2.2, 
    aeson ^>=2.1.1.0,
    gloss ^>=1.13.2.2,
    containers ^>=0.6.5.1
  hs-source-dirs:   src
  default-language: Haskell2010

executable 2022li1g003
  main-is:          Main.hs
  other-modules:
    Main
    LI12223
    Util
    Tarefa1_2022li1g003
    Tarefa2_2022li1g003
    Tarefa3_2022li1g003
    Tarefa4_2022li1g003
    Locale
  build-depends:    
    base ^>=4.16.3.0, 
    time ^>=1.11.1.1, 
    random ^>=1.2.1.1, 
    bytestring ^>=0.11.3.1,
    binary ^>=0.8.9.0,
    directory ^>=1.3.6.2,
    filepath ^>=1.4.2.2,
    aeson ^>=2.1.1.0,
    gloss ^>=1.13.2.2,
    containers ^>=0.6.5.1
  hs-source-dirs:   src
  default-language: Haskell2010

test-suite 2022li1g003-tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  other-modules:
    LI12223
    Util
    Tarefa1_2022li1g003
    Tarefa2_2022li1g003
    Tarefa3_2022li1g003
    Tarefa4_2022li1g003
    Tarefa1_2022li1g003_Spec
    Tarefa2_2022li1g003_Spec
    Tarefa3_2022li1g003_Spec
    Tarefa4_2022li1g003_Spec
    Locale
  build-depends:        
    base ^>=4.16.3.0, 
    time ^>=1.11.1.1, 
    random ^>=1.2.1.1, 
    bytestring ^>=0.11.3.1,
    binary ^>=0.8.9.0,
    directory ^>=1.3.6.2,
    filepath ^>=1.4.2.2,
    aeson ^>=2.1.1.0,
    gloss ^>=1.13.2.2,
    containers ^>=0.6.5.1,
    HUnit
  hs-source-dirs:       tests src
  default-language:     Haskell2010
